[project]
name = "harrix-pyssg"
version = "0.8"
description = "Simple static website generator in Python"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Anton Sergienko", email = "anton.b.sergienko@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
harrix-pyssg = "harrix_pyssg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["isort>=5.13.2", "pytest>=8.3.4", "ruff>=0.9.3"]

[tool.ruff]
line-length = 120
